--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,8 @@
-
-
-header{
-    padding-left: 50px;
-}
-
-#promo {
-    height: 80px;
-    margin-top: 2em;
-    padding: 2em;
-    position: relative;
-}
-
-#colonne_promo{
-position: absolute;
-top: 0%;
-}
-
-#button{
-    background-color: red;
-    color: white;
-    position: absolute;
-    top:15%;
-    left: 75%;
-}
 body {
    
     background-color: rgb(242, 245, 247);
 }
+
 
 .box {
     border: 2px solid white;
@@ -37,12 +13,47 @@ body {
     box-shadow: 1px 1px 5px rgb(218, 214, 214);
 }
 
- ul li {
-    list-style-type: none;
-  }
-  
+
+#button{
+    background-color: red;
+    color: white;
+    position: absolute;
+    top:15%;
+    left: 75%;
+}
+
+
+#colonne_promo{
+    position: absolute;
+    top: 0%;
+    }
+
+
+header{
+    padding-left: 50px;
+}
+
+
 .header {
     background-color: white;
     box-shadow: 1px 1px 5px rgb(218, 214, 214);
     padding-bottom: 1em;
   }
+
+  
+#promo {
+    height: 80px;
+    margin-top: 2em;
+    padding: 2em;
+    position: relative;
+}
+
+span {
+
+    font-size: 0.5em;
+}
+
+ ul li {
+    list-style-type: none;
+  }
+  
